Added ability to set multiple categories for an RSD  (#327)
* OSMT-198: Added ability to set multiple categories for an RSD.

* Update static dataset with multi author/category changes

---------
